crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__dict__double_star.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/dict/double_star.py
---
## AST

```
Module(
    ModModule {
        range: 0..278,
        body: [
            Expr(
                StmtExpr {
                    range: 125..135,
                    value: Dict(
                        ExprDict {
                            range: 125..135,
                            keys: [
                                None,
                                Some(
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            range: 133..134,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 128..129,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 134..134,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 136..161,
                    value: If(
                        ExprIf {
                            range: 136..161,
                            test: BooleanLiteral(
                                ExprBooleanLiteral {
                                    range: 150..154,
                                    value: true,
                                },
                            ),
                            body: Dict(
                                ExprDict {
                                    range: 136..146,
                                    keys: [
                                        Some(
                                            Name(
                                                ExprName {
                                                    range: 137..138,
                                                    id: "a",
                                                    ctx: Load,
                                                },
                                            ),
                                        ),
                                        None,
                                    ],
                                    values: [
                                        NumberLiteral(
                                            ExprNumberLiteral {
                                                range: 140..141,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                        Name(
                                            ExprName {
                                                range: 145..146,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            orelse: Name(
                                ExprName {
                                    range: 160..161,
                                    id: "y",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 163..184,
                    value: Dict(
                        ExprDict {
                            range: 163..184,
                            keys: [
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 179..180,
                                            id: "b",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Lambda(
                                    ExprLambda {
                                        range: 166..177,
                                        parameters: Some(
                                            Parameters {
                                                range: 173..174,
                                                posonlyargs: [],
                                                args: [
                                                    ParameterWithDefault {
                                                        range: 173..174,
                                                        parameter: Parameter {
                                                            range: 173..174,
                                                            name: Identifier {
                                                                id: "x",
                                                                range: 173..174,
                                                            },
                                                            annotation: None,
                                                        },
                                                        default: None,
                                                    },
                                                ],
                                                vararg: None,
                                                kwonlyargs: [],
                                                kwarg: None,
                                            },
                                        ),
                                        body: Name(
                                            ExprName {
                                                range: 176..177,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 182..183,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 185..201,
                    value: Dict(
                        ExprDict {
                            range: 185..201,
                            keys: [
                                Some(
                                    Name(
                                        ExprName {
                                            range: 186..187,
                                            id: "a",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 199..200,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 189..190,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 194..195,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 200..200,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 202..219,
                    value: Dict(
                        ExprDict {
                            range: 202..219,
                            keys: [
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 211..212,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                Some(
                                    Name(
                                        ExprName {
                                            range: 214..215,
                                            id: "b",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 205..206,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 212..212,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 217..218,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 220..241,
                    value: Dict(
                        ExprDict {
                            range: 220..241,
                            keys: [
                                Some(
                                    Name(
                                        ExprName {
                                            range: 221..222,
                                            id: "a",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 236..237,
                                            id: "b",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 224..225,
                                        value: Int(
                                            1,
                                        ),
                                    },
                                ),
                                UnaryOp(
                                    ExprUnaryOp {
                                        range: 229..234,
                                        op: Not,
                                        operand: Name(
                                            ExprName {
                                                range: 233..234,
                                                id: "x",
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                                NumberLiteral(
                                    ExprNumberLiteral {
                                        range: 239..240,
                                        value: Int(
                                            2,
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 242..252,
                    value: Dict(
                        ExprDict {
                            range: 242..252,
                            keys: [
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 250..251,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 245..246,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 251..251,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 253..267,
                    value: Dict(
                        ExprDict {
                            range: 253..267,
                            keys: [
                                None,
                                Some(
                                    UnaryOp(
                                        ExprUnaryOp {
                                            range: 258..264,
                                            op: Not,
                                            operand: Name(
                                                ExprName {
                                                    range: 262..264,
                                                    id: "in",
                                                    ctx: Load,
                                                },
                                            ),
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 256..257,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 265..266,
                                        id: "y",
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 268..277,
                    value: Dict(
                        ExprDict {
                            range: 268..277,
                            keys: [
                                None,
                                Some(
                                    Name(
                                        ExprName {
                                            range: 275..276,
                                            id: "y",
                                            ctx: Load,
                                        },
                                    ),
                                ),
                            ],
                            values: [
                                Name(
                                    ExprName {
                                        range: 271..272,
                                        id: "x",
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    ExprName {
                                        range: 276..276,
                                        id: "",
                                        ctx: Invalid,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
2 | # the ones which are higher than that.
3 | 
4 | {**x := 1}
  |      ^^ Syntax Error: expected Comma, found ColonEqual
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
  |


  |
2 | # the ones which are higher than that.
3 | 
4 | {**x := 1}
  |          ^ Syntax Error: expected Colon, found Rbrace
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
  |


  |
4 | {**x := 1}
5 | {a: 1, **x if True else y}
  |            ^^ Syntax Error: expected Comma, found If
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
  |


  |
4 | {**x := 1}
5 | {a: 1, **x if True else y}
  |                          ^ Syntax Error: Expected a statement
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
  |


  |
4 | {**x := 1}
5 | {a: 1, **x if True else y}
  |                           ^ Syntax Error: Expected a statement
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
8 | {**x and y, b: 2}
  |


  |
4 | {**x := 1}
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
  |    ^^^^^^^^^^^ Syntax Error: lambda expression cannot be used here
7 | {a: 1, **x or y}
8 | {**x and y, b: 2}
  |


  |
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
  |            ^^ Syntax Error: expected Comma, found Or
8 | {**x and y, b: 2}
9 | {a: 1, **not x, b: 2}
  |


  |
5 | {a: 1, **x if True else y}
6 | {**lambda x: x, b: 2}
7 | {a: 1, **x or y}
  |                ^ Syntax Error: expected Colon, found Rbrace
8 | {**x and y, b: 2}
9 | {a: 1, **not x, b: 2}
  |


   |
 6 | {**lambda x: x, b: 2}
 7 | {a: 1, **x or y}
 8 | {**x and y, b: 2}
   |      ^^^ Syntax Error: expected Comma, found And
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
   |


   |
 6 | {**lambda x: x, b: 2}
 7 | {a: 1, **x or y}
 8 | {**x and y, b: 2}
   |           ^ Syntax Error: expected Colon, found Comma
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
   |


   |
 7 | {a: 1, **x or y}
 8 | {**x and y, b: 2}
 9 | {a: 1, **not x, b: 2}
   |          ^^^^^ Syntax Error: unary `not` expression cannot be used here
10 | {**x in y}
11 | {**x not in y}
   |


   |
 8 | {**x and y, b: 2}
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
   |      ^^ Syntax Error: Expected an expression or a '}'
11 | {**x not in y}
12 | {**x < y}
   |


   |
 8 | {**x and y, b: 2}
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
   |          ^ Syntax Error: expected Colon, found Rbrace
11 | {**x not in y}
12 | {**x < y}
   |


   |
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
11 | {**x not in y}
   |      ^^^ Syntax Error: expected Comma, found Not
12 | {**x < y}
   |


   |
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
11 | {**x not in y}
   |          ^^ Syntax Error: Expected an identifier, but found a keyword 'in' that cannot be used here
12 | {**x < y}
   |


   |
 9 | {a: 1, **not x, b: 2}
10 | {**x in y}
11 | {**x not in y}
   |             ^ Syntax Error: expected Colon, found Name
12 | {**x < y}
   |


   |
10 | {**x in y}
11 | {**x not in y}
12 | {**x < y}
   |      ^ Syntax Error: expected Comma, found Less
   |


   |
10 | {**x in y}
11 | {**x not in y}
12 | {**x < y}
   |         ^ Syntax Error: expected Colon, found Rbrace
   |
